[package]
name = "nacos-rs-sdk"
version = "0.1.0"
authors = ["sohunjug <sohunjug@hotmail.com>"]
edition = "2018"

exclude = ["target"]
include = ["src/**/*", "Cargo.toml", "LICENSE", "README.md"]
repository = "https://github.com/Squbirreland/nacos-api.git"

description = "Nacos SDK - Rust Client"
keywords = ["nacos", "nacos-api", "nacos-rs", "nacos-sdk", "nacos-rs-sdk"]
readme = "README.md"
license = "Apache-2.0"


[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
lazy_static = "1.4.0"
