[package]
name = "nacos-rs-sdk"
version = "0.1.0"
authors = ["sohunjug <sohunjug@hotmail.com>"]
edition = "2018"

exclude = ["target"]
include = ["src/**/*", "Cargo.toml", "LICENSE", "README.md"]
repository = "https://github.com/sohunjug/nacso-rs-sdk.git"

description = "Nacos SDK - Rust Client"
keywords = ["nacos", "nacos-api", "nacos-rs", "nacos-sdk", "nacos-rs-sdk"]
readme = "README.md"
license = "Apache-2.0"


[dependencies]
tokio = { version = "1", features = ["full"] }
# nacos-rs-sdk-macro = "0.1.1"
nacos-rs-sdk-macro = { path = "./nacos-rs-sdk-macro" }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
lazy_static = "1.4.0"
async-trait = "0.1.50"
rand = "0.8.3"
md5 = "0.7.0"
